==> h1aji/Ka-Radio/src/vs1053.c <==
#define LOG_LOCAL_LEVEL ESP_LOG_VERBOSE
#define TAG "VS1053"
#include <string.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/semphr.h"
#include "esp8266/spi_struct.h"
#include "esp8266/spi_register.h"
#include "driver/gpio.h"
#include "audio_player.h"
#include "buffer.h"
#include "app_main.h"
#include "eeprom.h"
#include "interface.h"
#include "vs1053.h"
#define TMAX  4096
#define CHUNK 32
#define SPI 	0
#define HSPI	1

bool VS1053_HW_init() {

	ESP_LOGI(TAG, "Init VS1053 pins");

	// Set CS pin as output and high
	gpio_set_direction(GPIO_NUM_2, GPIO_MODE_OUTPUT);
	gpio_set_level(GPIO_NUM_2, 1);

	// Set DCS pin as output and high
	gpio_set_direction(GPIO_NUM_16, GPIO_MODE_OUTPUT);
	gpio_set_level(GPIO_NUM_16, 1);

	// Set DREQ pin as input
	gpio_set_direction(GPIO_NUM_10, GPIO_MODE_INPUT);
	//gpio_set_pull_mode(GPIO_NUM_10, GPIO_PULLDOWN_ENABLE); //usefull for no vs1053 test

	ESP_LOGI(TAG, "Init VS1053 SPI");

	if(!sSPI) vSemaphoreCreateBinary(sSPI);
	spi_give_semaphore();

	WRITE_PERI_REG(PERIPHS_IO_MUX, 0x105|(0<<9)); 		//Set bit 9 if 80MHz sysclock required
	PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTDI_U, FUNC_HSPIQ_MISO); //GPIO12 is HSPI MISO pin (Master Data In)
	PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTCK_U, FUNC_HSPID_MOSI); //GPIO13 is HSPI MOSI pin (Master Data Out)
	PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTMS_U, FUNC_HSPI_CLK);	//GPIO14 is HSPI CLK pin (Clock)
	PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO2_U, FUNC_GPIO2);	//GPIO2 is set as CS pin (Chip Select / Slave Select)


  	SET_PERI_REG_MASK(SPI_USER(HSPI), SPI_WR_BYTE_ORDER);	//SPI TX Byte order High to Low
  	SET_PERI_REG_MASK(SPI_USER(HSPI), SPI_RD_BYTE_ORDER);	//SPI RX Byte order High to Low

	SET_PERI_REG_MASK(SPI_USER(HSPI), SPI_CS_SETUP|SPI_CS_HOLD|SPI_USR_COMMAND);
	CLEAR_PERI_REG_MASK(SPI_USER(HSPI), SPI_FLASH_MODE);

	return true;
}

void VS1053_SPI_SpeedUp() {
	// 10MHz
	WRITE_PERI_REG(SPI_CLOCK(HSPI), 
			((1&SPI_CLKDIV_PRE)<<SPI_CLKDIV_PRE_S)|
			((3&SPI_CLKCNT_N)<<SPI_CLKCNT_N_S)|
			((1&SPI_CLKCNT_H)<<SPI_CLKCNT_H_S)|
			((3&SPI_CLKCNT_L)<<SPI_CLKCNT_L_S)); //clear bit 31,set SPI clock div
}

void VS1053_SPI_SpeedDown() {
	// 2MHz
	WRITE_PERI_REG(SPI_CLOCK(HSPI), 
			((9&SPI_CLKDIV_PRE)<<SPI_CLKDIV_PRE_S)|
			((3&SPI_CLKCNT_N)<<SPI_CLKCNT_N_S)|
			((1&SPI_CLKCNT_H)<<SPI_CLKCNT_H_S)|
			((3&SPI_CLKCNT_L)<<SPI_CLKCNT_L_S)); 
}

uint8_t SPIGetChar() {
	while(READ_PERI_REG(SPI_CMD(HSPI))&SPI_USR);	//wait for SPI to be ready       

	CLEAR_PERI_REG_MASK(SPI_USER(HSPI),SPI_FLASH_MODE|SPI_USR_MOSI);
  
	SET_PERI_REG_MASK(SPI_USER(HSPI),SPI_USR_MISO);

	WRITE_PERI_REG(SPI_USER1(HSPI),(0&SPI_USR_MOSI_BITLEN)<<SPI_USR_MOSI_BITLEN_S|	//number of bits to send
			(7&SPI_USR_MISO_BITLEN)<<SPI_USR_MISO_BITLEN_S|			//number of bits to receive
			(23&SPI_USR_ADDR_BITLEN)<<SPI_USR_ADDR_BITLEN_S);		//number of bits in address

	SET_PERI_REG_MASK(SPI_CMD(HSPI),SPI_USR);
	while(READ_PERI_REG(SPI_CMD(HSPI))&SPI_USR) ;

	if (READ_PERI_REG(SPI_USER(HSPI))&SPI_RD_BYTE_ORDER) {
		return READ_PERI_REG(SPI_W0(HSPI))>>24;	//assuming data in is written to MSB. TBC
	} else {
		return READ_PERI_REG(SPI_W0(HSPI));
	}
}

void SPIPutChar(uint8_t data) {
	while(READ_PERI_REG(SPI_CMD(HSPI))&SPI_USR);	//wait for SPI to be ready  

	CLEAR_PERI_REG_MASK(SPI_USER(HSPI),SPI_FLASH_MODE|SPI_USR_MISO);

	SET_PERI_REG_MASK(SPI_USER(HSPI),SPI_USR_MOSI);	//enable MOSI function in SPI module

	WRITE_PERI_REG(SPI_USER1(HSPI),((7&SPI_USR_MOSI_BITLEN)<<SPI_USR_MOSI_BITLEN_S)| //len bits of data out
			((0&SPI_USR_MISO_BITLEN)<<SPI_USR_MISO_BITLEN_S)|		//no data in
			((23&SPI_USR_ADDR_BITLEN)<<SPI_USR_ADDR_BITLEN_S));		//address is 24 bits A0-A23

	if (READ_PERI_REG(SPI_USER(HSPI))&SPI_WR_BYTE_ORDER) {
		WRITE_PERI_REG(SPI_W0(HSPI),(uint32_t)data<<24);
	} else {
		WRITE_PERI_REG(SPI_W0(HSPI),(uint32_t)data);
	}
	SET_PERI_REG_MASK(SPI_CMD(HSPI),SPI_USR);
}

void ControlReset(uint8_t State) {
	gpio_set_level(GPIO_NUM_2, State);
	gpio_set_level(GPIO_NUM_16, State);
}

void SCI_ChipSelect(uint8_t State) {
	gpio_set_level(GPIO_NUM_2, State);
}

void SDI_ChipSelect(uint8_t State) {
	gpio_set_level(GPIO_NUM_16, State);
}

void VS1053_regtest() {
	int MP3Status = VS1053_ReadRegister(SPI_STATUSVS);
	int MP3Mode = VS1053_ReadRegister(SPI_MODE);
	int MP3Clock = VS1053_ReadRegister(SPI_CLOCKF);
	ESP_LOGI(TAG,"SCI_Status  = 0x%X",MP3Status);
	ESP_LOGI(TAG,"SCI_Mode (0x4800) = 0x%X",MP3Mode);
	ESP_LOGI(TAG,"SCI_ClockF = 0x%X",MP3Clock);
	ESP_LOGI(TAG,"VS Version (VS1053 is 4) = %d",vsVersion);
	//The 1053B should respond with 4. VS1001 = 0, VS1011 = 1, VS1002 = 2, VS1003 = 3, VS1054 = 4
}

void VS1053_Start() {
	ControlReset(SET);
	vTaskDelay(10);
	ControlReset(RESET);
	vTaskDelay(100);	
	if (CheckDREQ() == 0) vTaskDelay(50);	// wait a bit more
	//Check DREQ
	if (CheckDREQ() == 0)
	{
		vsVersion = 0; 
		ESP_LOGE(TAG,"NO VS1053 detected");
		return;
	} 

// patch to mp3 mode id needed
//	if (VS1053_ReadRegister(SPI_AUDATA) == 0xac45) // midi mode?
		VS1053_GPIO1();	// patch if GPIO1 is not wired to gnd
	if (VS1053_ReadRegister(SPI_AUDATA) == 0xac45) // try again
	{
		VS1053_ResetChip();
		VS1053_GPIO1();	// patch if GPIO1 is not wired to gnd
	}

	vsVersion = (VS1053_ReadRegister(SPI_STATUSVS) >> 4) & 0x000F; //Mask out only the four version bits
	//0 for VS1001, 1 for VS1011, 2 for VS1002, 3 for VS1003, 4 for VS1053 and VS8053,
	//5 for VS1033, 7 for VS1103, and 6 for VS1063	
	ESP_LOGI(TAG,"VS10xx detection. Version: %x",vsVersion);

	// plugin patch
	if ((vsVersion == 4) && ((g_device->options&T_PATCH)==0)) 
	{	
		LoadUserCodes() ;	// vs1053b patch
		ESP_LOGI(TAG,"SPI_AUDATA 2 = %x",VS1053_ReadRegister(SPI_AUDATA));
		if (VS1053_ReadRegister(SPI_AUDATA) == 0xAC45) //midi mode?
		{
			VS1053_WriteRegister(SPI_AIADDR,0x00,0x50); // reset soft but let  patch loaded				
			VS1053_GPIO1();	// patch if GPIO1 is not wired to gnd
			if (VS1053_ReadRegister(SPI_AUDATA) == 0xAC45) // in midi mode
			{	//fed up
				ESP_LOGI(TAG,"midi mode on\n");
				g_device->options |= T_PATCH; // force no patch
				saveDeviceSettings(g_device);
				esp_restart();
			}
		}
	} 
	
	VS1053_InitVS();
	// disable analog output
	VS1053_WriteRegister16(SPI_VOL,0xFFFF);
	VS1053_DisableAnalog();
	vTaskDelay(1);
	ESP_LOGI(TAG,"volume: %d",g_device->vol);
	setIvol(g_device->vol);
	VS1053_SetVolume(g_device->vol);	
	VS1053_SetTreble(g_device->treble);
	VS1053_SetBass(g_device->bass);
	VS1053_SetTrebleFreq(g_device->freqtreble);
	VS1053_SetBassFreq(g_device->freqbass);
	VS1053_SetSpatial(g_device->spacial);
}

int VS1053_SendMusicBytes(uint8_t* music, uint16_t quantity) {
	if(quantity == 0) return 0;
	spi_take_semaphore();
	int o = 0;

	while(CheckDREQ() == 0)
	{
		vTaskDelay(1);
	}

	VS1053_SPI_SpeedUp();
	SDI_ChipSelect(SET);

	while(quantity)
	{
		if(CheckDREQ()) 
		{
			int t = quantity;
			int k;
			if(t > CHUNK) t = CHUNK;				
			for (k=o; k < o+t; k++)
			{
				SPIPutChar(music[k]);
			}
			o += t;
			quantity -= t;
		} 
	}
	SDI_ChipSelect(RESET);
	VS1053_SPI_SpeedDown();
	spi_give_semaphore();
	return o;
}

void VS1053_flush_cancel() {
	int8_t endFillByte ;
	int16_t y;
	uint8_t buf[33];	
	// set spimode with SM_CANCEL
	uint16_t spimode = VS1053_ReadRegister(SPI_MODE)| SM_CANCEL;
  // set CANCEL
	VS1053_WriteRegister(SPI_MODE, MaskAndShiftRight(spimode,0xFF00,8), (spimode & 0x00FF));
	// wait CANCEL
	VS1053_WriteRegister16(SPI_WRAMADDR, para_endFillByte);
	endFillByte = (int8_t) (VS1053_ReadRegister(SPI_WRAM) & 0xFF);
	for (y = 0; y < 32; y++) buf[y] = endFillByte;	 
	y = 0;
	while (VS1053_ReadRegister(SPI_MODE)& SM_CANCEL)
	{	  
		VS1053_SendMusicBytes( buf, 32); 
		if (y++ > 64) 
		{
			ESP_LOGE(TAG,"VS1053 Reset");
//			VS1053_Start();
			break;
		}		
	}	

	for (y = 0; y < 64; y++) 
		VS1053_SendMusicBytes(buf, 32); //2080 bytes
}
