==> Kitjawat/ESP8266-WebRadio/ESP8266-Firmware/app/user/vs1053.c <==
#include "vs1053.h"
#include "stdio.h"
#include "spi.h"
#include "osapi.h"

ICACHE_FLASH_ATTR void VS1053_HW_init(){
 	spi_init(HSPI);
	spi_clock(HSPI, 4, 10); //2MHz
	PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTDO_U, 3);
	PIN_DIR_OUTPUT |= (1<<RST_PIN)|(1<<CS_PIN)|(1<<XDCS_PIN);
	PIN_DIR_INPUT |= (1<<DREQ_PIN);
	PIN_OUT_SET |= (1<<RST_PIN)|(1<<CS_PIN)|(1<<XDCS_PIN);
}

ICACHE_FLASH_ATTR void VS1053_SPI_SpeedUp()
{
	spi_clock(HSPI, 4, 2); //10MHz
//	spi_clock(HSPI, 4, 3); //6.66MHz
//	spi_clock(HSPI, 3, 3); //8.88MHz
}

ICACHE_FLASH_ATTR void VS1053_SPI_SpeedDown() {
	spi_clock(HSPI, 4, 10); //2MHz
}

ICACHE_FLASH_ATTR void SPIPutChar(uint8_t data){
	spi_tx8(HSPI, data);
	while(spi_busy(HSPI));
}

ICACHE_FLASH_ATTR uint8_t SPIGetChar(){
	while(spi_busy(HSPI));
	return spi_rx8(HSPI);
}

ICACHE_FLASH_ATTR void ControlReset(uint8_t State){
	if(State) PIN_OUT_CLEAR |= (1<<RST_PIN);
	else PIN_OUT_SET |= (1<<RST_PIN);
}

ICACHE_FLASH_ATTR void SCI_ChipSelect(uint8_t State){
	if(State) PIN_OUT_CLEAR |= (1<<CS_PIN);
	else PIN_OUT_SET |= (1<<CS_PIN);
}

ICACHE_FLASH_ATTR void SDI_ChipSelect(uint8_t State){
	if(State) PIN_OUT_CLEAR |= (1<<XDCS_PIN);
	else PIN_OUT_SET |= (1<<XDCS_PIN);
}

ICACHE_FLASH_ATTR void VS1053_regtest()
{
	int MP3Status = VS1053_ReadRegister(SPI_STATUS);
	int MP3Mode = VS1053_ReadRegister(SPI_MODE);
	int MP3Clock = VS1053_ReadRegister(SPI_CLOCKF);
	int vsVersion ;
	printf("SCI_Mode (0x4800) = 0x%X\r\n",MP3Mode);
	printf("SCI_Status (0x48) = 0x%X\r\n",MP3Status);

	vsVersion = (MP3Status >> 4) & 0x000F; //Mask out only the four version bits
	printf("VS Version (VS1053 is 4) = %d\r\n",vsVersion);
	//The 1053B should respond with 4. VS1001 = 0, VS1011 = 1, VS1002 = 2, VS1053 = 3

	printf("SCI_ClockF = 0x%X\r\n",MP3Clock);
	printf("SCI_ClockF = 0x%X\r\n",MP3Clock);
}

ICACHE_FLASH_ATTR void VS1053_Start(){
	VS1053_ResetChip();
	Delay(100);
// these 4 lines makes board to run on mp3 mode, no soldering required anymore
	VS1053_WriteRegister(SPI_WRAMADDR, 0xc0,0x17); //address of GPIO_DDR is 0xC017
	VS1053_WriteRegister(SPI_WRAM, 0x00,0x03); //GPIO_DDR=3
	VS1053_WriteRegister(SPI_WRAMADDR, 0xc0,0x19); //address of GPIO_ODATA is 0xC019
	VS1053_WriteRegister(SPI_WRAM, 0x00,0x00); //GPIO_ODATA=0
	Delay(100);
	while(VS1053_checkDREQ() == 0);
	VS1053_WriteRegister(SPI_CLOCKF,0x60,0x00);
//	VS1053_WriteRegister(SPI_MODE, (SM_LINE1 | SM_SDINEW)>>8 , SM_RESET); // soft reset
	VS1053_SoftwareReset();

	VS1053_WriteRegister(SPI_MODE, SM_SDINEW>>8, SM_LAYER12); //mode 
	while(VS1053_checkDREQ() == 0);
	VS1053_regtest();
}

ICACHE_FLASH_ATTR int VS1053_SendMusicBytes(uint8_t* music, uint16_t quantity){
	if(quantity < 1) return 0;
	spi_take_semaphore();
	while(VS1053_checkDREQ() == 0);
	SDI_ChipSelect(SET);
	int o = 0;
	while(quantity)
	{
		if(VS1053_checkDREQ()) {
			int t = quantity;
			int k;
			if(t > 32) t = 32;
			for (k=o; k < o+t; k++)
			{
				SPIPutChar(music[k]);
			}
			o += t;
			quantity -= t;
		}
	}
	SDI_ChipSelect(RESET);
	spi_give_semaphore();
	return o;
}

ICACHE_FLASH_ATTR void VS1053_flush_cancel(uint8_t mode) {  // 0 only fillbyte  1 before play    2 cancel play
//  int8_t endFillByte = (int8_t) (Mp3ReadWRAM(para_endFillByte) & 0xFF);
	VS1053_WriteRegister(SPI_WRAMADDR,MaskAndShiftRight(para_endFillByte,0xFF00,8), (para_endFillByte & 0x00FF) );
	int8_t endFillByte = (int8_t) VS1053_ReadRegister(SPI_WRAM) & 0xFF;
	uint8_t buf[513];
	int y;
	for (y = 0; y < 513; y++) buf[y] = endFillByte;

  if (mode != 0) //set CANCEL
  {
//Mp3WriteRegister(SCI_MODE, (Mp3ReadRegister(SCI_MODE) | SM_CANCEL));
	uint16_t spimode = VS1053_ReadRegister(SPI_MODE)| SM_CANCEL;
  // set CANCEL
	VS1053_WriteRegister(SPI_MODE,MaskAndShiftRight(spimode,0xFF00,8), (spimode & 0x00FF) );
	// wait CANCEL
	y = 0;
	while (VS1053_ReadRegister(SPI_MODE)& SM_CANCEL)
	{	  
		if (mode == 1) VS1053_SendMusicBytes( buf, 32); //1
		else vTaskDelay(2); //2  
//		printf ("Wait CANCEL clear\n");
		if (y++ > 513) 
		{
			VS1053_Start();
			break;
		}
		
	}	 
	for ( y = 0; y < 4; y++)	VS1053_SendMusicBytes( buf, 513); // 4*513 = 2052
  } else
  {
	for ( y = 0; y < 4; y++)	VS1053_SendMusicBytes( buf, 513); // 4*513 = 2052
  }	  
}
